8293156: Dcmd VM.classloaders fails to print the full hierarchy

Backport-of: c6be2cd347fc07dcc0da56acf40fc7a005119f09